--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,43 +12,45 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "aws-sdk": "^2.473.0",
-    "baseui": "^7.6.1",
+    "aws-sdk": "^2.496.0",
+    "baseui": "^8.8.0",
     "bokehjs": "^1.2.0",
     "bootstrap": "^4.3.1",
     "camelcase": "^5.2.0",
     "clipboard": "^2.0.4",
-    "d3": "^5.9.2",
+    "d3": "^5.9.7",
     "d3-graphviz": "^2.6.1",
-    "deck.gl": "^7.1.3",
+    "deck.gl": "^7.1.10",
     "immutable": "^4.0.0-rc.12",
     "leaflet": "^1.3.4",
-    "mapbox-gl": "^1.0.0",
+    "lodash": "^4.17.15",
+    "mapbox-gl": "^1.1.1",
     "mixpanel-browser": "^2.29.0",
     "moment": "^2.22.2",
     "moment-duration-format": "^2.3.2",
     "node-sass": "^4.12.0",
     "numeral": "^2.0.6",
-    "plotly.js": "^1.48.2",
+    "plotly.js": "^1.48.3",
     "prismjs": "^1.15.0",
     "prop-types": "^15.7.2",
     "protobufjs": "^6.8.8",
     "react": "^16.8.6",
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.8.4",
-    "react-feather": "^1.1.6",
+    "react-feather": "^2.0.3",
     "react-google-login": "^5.0.4",
-    "react-hotkeys": "^1.1.4",
+    "react-hotkeys": "1.1.4",
     "react-json-view": "^1.19.1",
     "react-leaflet": "^2.4.0",
-    "react-map-gl": "^5.0.3",
-    "react-markdown": "^4.0.6",
+    "react-map-gl": "^5.0.7",
+    "react-markdown": "^4.1.0",
     "react-plotly.js": "^2.3.0",
     "react-scripts": "^3.0.1",
-    "react-transition-group": "^4.1.0",
+    "react-transition-group": "^4.2.1",
     "react-virtualized": "^9.21.0",
-    "reactstrap": "^8.0.0",
+    "reactstrap": "^8.0.1",
     "recharts": "^1.6.2",
+    "static-eval": "^2.0.2",
     "styletron-engine-atomic": "^1.4.0",
     "styletron-react": "^5.2.0",
     "typed-signals": "^1.0.5",
@@ -57,39 +59,38 @@
     "vega-lite": "^3.3.0"
   },
   "devDependencies": {
-    "@craco/craco": "^5.2.1",
-    "@types/baseui": "^7.3.0",
+    "@craco/craco": "^5.2.4",
     "@types/clipboard": "^2.0.1",
     "@types/d3": "^5.7.2",
     "@types/d3-graphviz": "^2.6.2",
-    "@types/jest": "^24.0.11",
+    "@types/jest": "^24.0.15",
     "@types/mixpanel-browser": "^2.23.1",
-    "@types/node": "^12.0.8",
-    "@types/plotly.js": "^1.44.8",
+    "@types/node": "^12.6.8",
+    "@types/plotly.js": "^1.44.9",
     "@types/prismjs": "^1.16.0",
-    "@types/react": "^16.8.19",
+    "@types/react": "^16.8.23",
     "@types/react-copy-to-clipboard": "^4.2.6",
     "@types/react-dom": "^16.8.4",
-    "@types/react-plotly.js": "^2.2.2",
+    "@types/react-plotly.js": "^2.2.3",
     "@types/react-transition-group": "^2.9.2",
-    "@types/react-virtualized": "^9.21.2",
+    "@types/react-virtualized": "^9.21.3",
     "@types/reactstrap": "^8.0.1",
-    "@types/recharts": "^1.1.16",
+    "@types/recharts": "^1.1.20",
     "@types/styletron-engine-atomic": "^1.1.0",
     "@types/styletron-react": "^5.0.1",
     "@types/styletron-standard": "^2.0.0",
-    "@typescript-eslint/eslint-plugin": "^1.10.2",
-    "@typescript-eslint/parser": "^1.10.2",
-    "cypress": "^3.3.1",
+    "@typescript-eslint/eslint-plugin": "^1.13.0",
+    "@typescript-eslint/parser": "^1.13.0",
+    "cypress": "^3.4.0",
     "cypress-image-snapshot": "^3.1.1",
     "eslint-config-fbjs": "^3.1.0",
     "eslint-plugin-babel": "^5.3.0",
-    "eslint-plugin-import": "^2.17.3",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-react": "^7.12.4",
-    "eslint-plugin-relay": "^1.0.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.14.2",
+    "eslint-plugin-relay": "^1.3.5",
     "scss-to-json": "^2.0.0",
-    "typescript": "^3.5.1"
+    "typescript": "^3.5.3"
   },
   "browserslist": [
     ">0.2%",
